--- a/angular.json
+++ b/angular.json
@@ -29,6 +29,7 @@
             ],
             "styles": [
               "src/scss/custom-theme.scss",
+              "src/scss/fontNissan.scss",
               "src/scss/styles.scss",
               "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
